DD-1492 (#16)
* Refactorings.

* Refactorings.

* Simplified, but possibly broken some things in the process.

* Zipping RDA bag.

* Writing RDA zip file.

* Refactorings.

* Old comment.

* Upgrade to parent 1.1.0-SNAPSHOTS and (mostly) up-to-date libs.

* upgraded parent