@@ -18,14 +18,13 @@ package nl.knaw.dans.vaultingest.core.datacite;
 import lombok.extern.slf4j.Slf4j;
 import nl.knaw.dans.vaultingest.core.deposit.Deposit;
 import nl.knaw.dans.vaultingest.core.mappings.Datacite;
-import nl.knaw.dans.vaultingest.domain.Affiliation;
-import nl.knaw.dans.vaultingest.domain.DescriptionType;
-import nl.knaw.dans.vaultingest.domain.NameIdentifier;
-import nl.knaw.dans.vaultingest.domain.Resource;
-import nl.knaw.dans.vaultingest.domain.ResourceType;
+import org.datacite.schema.kernel_4.Affiliation;
+import org.datacite.schema.kernel_4.DescriptionType;
+import org.datacite.schema.kernel_4.NameIdentifier;
+import org.datacite.schema.kernel_4.Resource;
+import org.datacite.schema.kernel_4.ResourceType;
 
 import java.time.format.DateTimeFormatter;
-import java.util.stream.Collectors;
 
 @Slf4j
 public class DataciteConverter {
@@ -104,7 +103,7 @@ public class DataciteConverter {
             }
 
             return creator;
-        }).collect(Collectors.toList());
+        }).toList();
 
         creators.getCreator().addAll(results);
 
